--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.10",
+    "bootstrap": "^3.3.7",
     "core-js": "^3.6.5",
+    "jquery": "^1.12.4",
     "vue": "^2.6.11",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
